<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

        <ImageView
            android:id="@+id/dollarSign"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_attach_money_24"
            />

        <TextView
            android:id="@+id/saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10000"
            android:textSize="20dp"
            android:layout_toEndOf="@id/dollarSign"
            android:layout_toRightOf="@id/dollarSign" />
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/myorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myorder"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
            android:id="@+id/drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp 123"
            android:layout_gravity="center"
            />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                >

            <TextView
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quantity : "
                />
            <EditText
                android:id="@+id/qty"
                android:layout_width="100dp"
                android:layout_alignParentRight="true"
                android:layout_height="50dp"
                android:text=""
                android:inputType="number"
                />

            </LinearLayout>

        </RelativeLayout>
        
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        >

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            />

        <Button
            android:id="@+id/ordermore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordermore"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

</LinearLayout>